Convert indentation from tabs to spaces
